fixed alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -73,7 +73,7 @@ input[type=input] {
 
 .content {
     text-align: center;
-    margin-top: 250px;
+    margin-top: 400px;
 }
 
 .output {
